--- a/src/main/resources/email/password_recovery.html
+++ b/src/main/resources/email/password_recovery.html
@@ -4,13 +4,17 @@
 </head>
 <body>
 
-Hey there!
+<main style="font-size: 20px;font-family: 'Open Sans',Helvetica,Arial,'Lucida Grande',sans-serif;color: #404040;margin: 0;padding: 0;">
+    <h1>Hey {{name}}!</h1>
 
-Someone requested a new password for your QuPath Edu account.
+    <p>Someone requested a new password for your QuPath Edu account.</p>
 
-Please enter the following code to QuPath <pre>{{token}}</pre> or use the following link to reset your password: <a href="{{link}}">{{link}}</a>
+    <p>If this was you, then use the following code to reset your password: <pre style="border: 1px solid #ccc;padding: 5px;border-radius: 2px;width:fit-content">{{token}}</pre></p>
 
-If you didn&#8217;t make this request, then you can ignore this email.
+    <p><small><em>This token will expire in one hour.</em></small></p>
+
+    <p>If you didn&#8217;t make this request, then you can ignore this email.</p>
+</main>
 
 </body>
 </html>
