--- a/src/main/resources/email/password_recovery.html
+++ b/src/main/resources/email/password_recovery.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-    <title>Reset QuPath Edu Password</title>
+    <title>Reset Open Microanatomy Password</title>
 </head>
 <body>
 
 <main style="font-size: 20px;font-family: 'Open Sans',Helvetica,Arial,'Lucida Grande',sans-serif;color: #404040;margin: 0;padding: 0;">
     <h1>Hey {{name}}!</h1>
 
-    <p>Someone requested a new password for your QuPath Edu account.</p>
+    <p>Someone requested a new password for your Open Microanatomy account.</p>
 
     <p>If this was you, then use the following code to reset your password: <pre style="border: 1px solid #ccc;padding: 5px;border-radius: 2px;width:fit-content">{{token}}</pre></p>
 
